...
                                <rect key="frame" x="136" y="242" width="50" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                <state key="normal" title="Lock">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <rect key="frame" x="124" y="364" width="73" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="profile" selectedImage="profile-selected" id="OxC-jL-BHq"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="2dh-Mw-miq" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                <rect key="frame" x="247" y="509" width="57" height="30"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Camera">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YV3-fF-ibG">
                                <rect key="frame" x="145" y="438" width="30" height="30"/>
                                <state key="normal" title="Skip"/>
                                <connections>
                                    <action selector="skip:" destination="8PI-fx-lgW" eventType="touchUpInside" id="BuV-Un-xbU"/>
...
                                    <constraint firstAttribute="height" constant="100" id="f6q-Th-J6k"/>
                                </constraints>
                                <state key="normal" backgroundImage="touchid"/>
                                <connections>
                                    <action selector="authenticateUser:" destination="8PI-fx-lgW" eventType="touchUpInside" id="cIE-qC-N05"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
